--- a/stylesheet/istyle.css
+++ b/stylesheet/istyle.css
@@ -1,13 +1,13 @@
 :root{
     --body-background-color: rgb(240, 240, 240);  
-    --navbar-color: rgb(44, 59, 145);  
-    --button-color: rgb(51, 67, 218);  
-
-    --text-color: #afafaf;     
-    --heading-color: #111111;  
-    --accent-color: #2A9D8F;   
+    --navbar-color: #FF8C00;  
+    --button-color: #f0d01a;  
+    --contact-color: #FF8C00;
+    --text-color: #6A4423;      
     --border-color: #E0E0E0;
     --card-skeleton-color:#a8a8a8;
+    --h2-color:#000000;
+    --anchor-color:whitesmoke;
 
     --base-top-margin:140px;
 }
@@ -40,8 +40,11 @@ span{
 ::placeholder{
     font-size: 12px;
 }
-p,h1,h2,h3{
+p,h1,h3{
     color: var(--text-color);
+}
+h2{
+    color: var(--h2-color);
 }
 
 /* home page */
@@ -71,12 +74,14 @@ p,h1,h2,h3{
     position: absolute;
     top: 65%;
     text-decoration: solid;
+    color: whitesmoke;
 }
 .home section h3{
     width: 100%;
     text-align: center; 
     position: absolute;
     top: 72%;
+    color: var(--anchor-color);
 }
 .home section button{
     position: absolute;
@@ -100,7 +105,7 @@ p,h1,h2,h3{
 }
 .home nav ul li a{
     transition: color 100ms ease-in;
-    color: whitesmoke;
+    color: var(--anchor-color);
 }
 
 /* event page */
@@ -138,18 +143,27 @@ p,h1,h2,h3{
     height: 350px;
     width: 250px;
     border-radius: 15px;
-    background-color: gray;
+    background-color: var(--card-skeleton-color);
     position: relative;
+    background-image: url(../images/old_event.png);
 }
 .event .card > div p {
     position: absolute;
     bottom: 10px;
     left: 50%;
     transform: translateX(-50%);
-    color: whitesmoke;
+    color: var(--anchor-color);
+}
+.event .card #card_4 p:nth-child(1){
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: black;
 }
 .event #heading_3{
     width: 100%;
+    font-size: 24px;
     text-align: center;
     position: absolute;
     left: 50%;
@@ -160,7 +174,7 @@ p,h1,h2,h3{
 /* about section  */
 .about{
     min-height: 100vh;
-    height: 1500px;
+    height: 1200px;
     width: 100%;
     background-color: var(--primary-background-color);
     position: relative;
@@ -197,15 +211,9 @@ p,h1,h2,h3{
     background-color: gray;
     position: relative;
 }
-.about .card > div p {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    color: whitesmoke;
-}
 .about #heading_3{
     width: 100%;
+    font-size: 24px;
     text-align: center;
     position: absolute;
     left: 50%;
@@ -238,46 +246,32 @@ p,h1,h2,h3{
     border-radius: 15px;
     background-color: gray;
 }
-.about .tcard #tcard_3{
-    width: 900px;
-    display: flex;
-    box-sizing: border-box;
-    box-shadow: 10px 10px 0px 0px rgb(232, 238, 231);
-    border: 2px solid black;
-}
-.about .tcard #tcard_3 img{
-    flex: 1 0 0;
-    margin: 10px;
-    border-radius: 15px;
-}
-.about .tcard #tcard_3 #data{
-    flex: 2 0 0;
-    margin: 10px;
-    position: relative;
-    border-radius: 15px;
-    display: flex;
-    flex-wrap: wrap;
-}
-.about .tcard #tcard_3 #data h3{
-    width: 100%;
+.about #heading_4 h2{
+    color: black;
 }
 
 /* contact  */
 .contact{
-    height: 40vh;
+    height: 400px;
     width: 100%;
+    background-color: var(--contact-color);
+    position: relative;
 }
 .contact #heading_1{
     width: 100%;
+    position: absolute;
+    top: 10px;
     text-align: center;
 }
 .contact #heading_2{
     width: 100%;
     text-align: center;
     margin-top: 18px;
+    position: absolute;
+    top: 25px;
 }
 .contact .ccard{
-    height: 400px;
+    height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -317,6 +311,9 @@ p,h1,h2,h3{
     text-indent: 15px;
 
 }
+.donation_card{
+    display: none;
+}
 
 /* Animation section */
 
@@ -328,7 +325,11 @@ p,h1,h2,h3{
     box-shadow: 2px 2px 4px rgba(0,0,0,0.5);
     transform: scale(1.05);
     transition: all 300ms ease-in;
-}    
+}  
+.event .card > div p:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}  
 
 
 /* about section animation */
