--- a/stylesheet/istyle.css
+++ b/stylesheet/istyle.css
@@ -148,6 +148,7 @@ h2{
     border-radius: 15px;
     background-color: var(--card-skeleton-color);
     position: relative;
+    border: 2px solid black;
     background-image: url(../images/old_event.png);
 }
 .event .card > div p {
@@ -213,6 +214,7 @@ h2{
     border-radius: 15px;
     background-color: gray;
     position: relative;
+    border: 2px solid black;
 }
 .about #heading_3{
     width: 100%;
@@ -248,6 +250,8 @@ h2{
     width: 550px;
     border-radius: 15px;
     background-color: gray;
+    border: 2px solid black;
+    box-shadow: inset black 5px 5px;
 }
 .about #heading_4 h2{
     color: black;
@@ -312,7 +316,6 @@ h2{
     width: 400px;
     border-radius: 8px;
     text-indent: 15px;
-
 }
 .donation_card{
     position: fixed;
@@ -323,6 +326,18 @@ h2{
     height: 450px;
     width: 700px;
     border-radius: 8px;
+    display: none;
+}
+.donation_card p{
+    height: 30px;
+    width: 40px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 32px;
+    font-weight: 600;
+    text-align: center;
+    cursor: pointer;
 }
 
 /* Animation section */
@@ -343,6 +358,7 @@ h2{
 button:hover{
     width: 140px;
     height: 48px;
+    font-size: 26px;
 }
 
 
