--- a/stylesheet/istyle.css
+++ b/stylesheet/istyle.css
@@ -4,12 +4,13 @@
     --navbar-color: #FF8C00;  
     --button-color: #f0d01a;  
     --contact-color: #FF8C00;
-    --text-color: #6A4423;      
+    --text-color: #000000;      
     --border-color: #E0E0E0;
     --card-skeleton-color:#a8a8a8;
-    --h2-color:#000000;
+    --h2-color:#6A4423;
     --anchor-color:whitesmoke;
     --donation-card:whitesmoke;
+    --footer-color:#fca235;
 
     --base-top-margin:140px;
 }
@@ -18,12 +19,17 @@
 *{
     margin: 0;
     padding:0;
+    box-sizing: border-box;
     text-decoration: none;
     list-style-type: none;
     /* outline: 1px solid rgba(255, 0, 0, 0.3);  */
 }
 body{
     background-color: var(--body-background-color);
+    display: flex;
+    flex-direction: column;
+    scroll-behavior: smooth;
+    /* font-family: Arial, sans-serif; */
 }
 button{
     height: 40px;
@@ -43,348 +49,319 @@ span{
 ::placeholder{
     font-size: 12px;
 }
-p,h1,h3{
-    color: var(--text-color);
-}
-h2{
+#heading_2{
     color: var(--h2-color);
+    font-size: 26px;
+}
+#heading_3{
+    color: var(--text-color);
+    font-size: 25px;
+}
+#para{
+    font-size: 23px;
 }
 
 /* home page */
 .home{
     height: 100vh;
     width: 100%;
-    background: url(../images/front_img.jpg) center/cover no-repeat;
+    background: url(../images/front_img.jpg) center / 100% 100vh no-repeat;
 }
-.home nav{
+.home #navbar{
+    height: 70px;
+    width: 100%;
+    z-index: 2000;
     background-color: var(--navbar-color);
-    height:7%;
-    width: 100vw;
     display: flex;
-    position: fixed;
-    top: 0;
-    z-index: 1000;
-}
-.home section{
-    height: 100vh;
-    width: 100%;
-    position: relative;
-    row-gap: 24px;
-}
-.home section h2{
-    width: 100%;
-    text-align: center; 
-    position: absolute;
-    top: 65%;
-    text-decoration: solid;
-    color: whitesmoke;
-}
-.home section h3{
-    width: 100%;
-    text-align: center; 
-    position: absolute;
-    top: 72%;
-    color: var(--anchor-color);
-}
-.home section button{
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    transform: translate(-50%);
-}
-.home nav span{
-    flex: 1;
-    flex-basis: 0;
-    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    top: 0px;
 }
-.home nav ul{
-    flex: 3;
+.home #navbar #company_name{
+    flex: 1 0 300px;
     display: flex;
-    flex-basis: 0;
+    justify-content: center;
+}
+.home #navbar #u_list{
+    flex: 4 0 300px;
+    display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
-.home nav ul li a{
-    transition: color 100ms ease-in;
+.home #navbar #u_list li > a{
     color: var(--anchor-color);
+}
+.home #navbar #card_btn{
+    flex: 1 0 300px;
+    display: flex;
+    justify-content: center;
+}
+.home #home_quote{
+    height: 100vh;
+    width: 100%;
+}
+.home #home_quote #heading_2{
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%,-70%);
+    width: 100%;
+    text-align: center;
+}
+.home #home_quote #heading_3{
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%,-75%);
+    width: 100%;
+    text-align: center;
 }
 
 /* event page */
 .event{
     height: 100vh;
     width: 100%;
-    position: relative;
 }
-.event #heading_1{
+.event #heading #heading_2{
+    height: 10%;
     width: 100%;
     text-align: center;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    top: calc(var(--base-top-margin));
+    padding-top: 80px;
+    margin-top: 50px;
 }
-.event #heading_2{
+.event #heading #heading_3{
+    height: 10%;
     width: 100%;
     text-align: center;
-    position: absolute;
-    left: 50%;
-    top: calc(var(--base-top-margin) + 100px);
-    transform: translate(-50%);
+    margin-top: 20px;
 }
 .event .card{
-    width: 100%;
-    position: absolute;
-    top: calc(var(--base-top-margin) + 220px);
+    margin-top: 40px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 400px;
+    flex-wrap: wrap;
+    height: 500px;
+    width: 100%;
 }
-.event .card > div {
+.event .card > div{
+    width: 325px;
+    flex-shrink: 300px;
     height: 350px;
-    width: 250px;
-    border-radius: 15px;
+    border-radius: 8px;
+    border: 2px black solid;
     background-color: var(--card-skeleton-color);
+    background: url(../images/old_event.png) center / 100% 100% no-repeat;
     position: relative;
-    border: 2px solid black;
-    background-image: url(../images/old_event.png);
 }
-.event .card > div p {
+.event .card div > p{
+    color: var(--anchor-color);
     position: absolute;
     bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    color: var(--anchor-color);
+    left: 40%;
 }
-.event .card #card_4 p:nth-child(1){
+.event .card #card_4 > p:nth-child(1){
     position: absolute;
     top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    color: black;
+    left: 40%;
+    color: var(--text-color);
 }
-.event #heading_3{
-    width: 100%;
-    font-size: 24px;
+.event #heading #para{
     text-align: center;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    top: calc(var(--base-top-margin) + 700px);
+    padding-top: 50px;
 }
-
-/* about section  */
+/* about page */
 .about{
     min-height: 100vh;
-    height: 1200px;
+    height: auto;
     width: 100%;
-    background-color: var(--primary-background-color);
-    position: relative;
 }
-.about #heading_1{
+.about #heading #heading_2{
     width: 100%;
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    top: calc(var(--base-top-margin) - 40px);
+    height: 130px;
+    display: flex;
+    justify-content: center;
+    align-items: end;
 }
-.about #heading_2{
+.about #heading #heading_3{
     width: 100%;
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    top: calc(var(--base-top-margin) + 10px);
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: end;
 }
 .about .card{
+    height: 400px;
     width: 100%;
-    position: absolute;
-    top: calc(var(--base-top-margin) + 100px);
+    margin-top: 10px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 400px;
+    flex-wrap: wrap;  
 }
-.about .card > div {
+.about .card > div{
+    width: 325px;
+    flex-shrink: 300px;
     height: 350px;
-    width: 250px;
-    border-radius: 15px;
-    background-color: gray;
+    border-radius: 8px;
+    border: 2px black solid;
+    background-color: var(--card-skeleton-color);
     position: relative;
-    border: 2px solid black;
 }
-.about #heading_3{
-    width: 100%;
-    font-size: 24px;
+.about #heading #para{
     text-align: center;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    top: calc(var(--base-top-margin) + 525px);
-}
-.about #heading_4{
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    top: calc(var(--base-top-margin) + 575px);
 }
 .about .tcard{
-    width: 100%;
-    position: absolute;
-    top: calc(var(--base-top-margin) + 650px);
+    height: 325px;
     display: flex;
-    flex-wrap: wrap;
-    row-gap: 30px;
     justify-content: space-evenly;
     align-items: center;
-    min-height: 300px;
-    height: auto;
 }
 .about .tcard > div{
-    height: 250px;
-    width: 550px;
-    border-radius: 15px;
-    background-color: gray;
-    border: 2px solid black;
-    box-shadow: inset black 5px 5px;
-}
-.about #heading_4 h2{
-    color: black;
+    height: 270px;
+    width: 400px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 4px rgba(0,0,0,0.5);
 }
 
-/* contact  */
+/* contact page */
 .contact{
-    height: 400px;
-    width: 100%;
     background-color: var(--contact-color);
-    position: relative;
-}
-.contact #heading_1{
+    height: 450px;
     width: 100%;
-    position: absolute;
-    top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.contact #heading{
+    flex: 0.5 0 0;
+    width: 100%;
     text-align: center;
 }
 .contact #heading_2{
-    width: 100%;
-    text-align: center;
-    margin-top: 18px;
-    position: absolute;
-    top: 25px;
+    margin-top: 10px;
 }
 .contact .ccard{
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.contact .ccard address{
-    width: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    row-gap: 15px;
-}
-.contact .ccard address p{
-    width: 100%;
-    text-align: center;
-}
-.contact .ccard .mailbox{
-    width: 50%;
-    height: 100%;
+    flex: 3 0 0;
 }
 .contact .ccard form{
-    width: 50%;
-    height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
     align-items: center;
+}
+form input,textarea{
+    border-radius: 6px;
+    text-indent: 10px;
+    border: none;
+}
+form input:focus,
+form textarea:focus {
+    outline: none;
+    border-color: var(--button-color);
+}
+form input{
+    width: 100%;
+    height: 40px;
+}
+.footer{
+    height: 50px;
+    background-color: var(--footer-color);
+}
+.footer address{
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.footer address > p{
+    font-size: 18px;
+    font-family: Arial;
+}
+.footer address > p:nth-child(3){
+    display: flex;
     justify-content: center;
-    row-gap: 20px;
+    align-items: center;
+    gap: 20px;
 }
-.contact .ccard form input, 
-.contact .ccard form textarea {
-    height: 30px;
-    width: 400px;
-    border-radius: 8px;
-    text-indent: 15px;
+.footer address > p:nth-child(3) > a{
+    color: var(--h2-color);
 }
+.footer address > p:nth-child(2) > a{
+    color: var(--text-color);
+}
+
 .donation_card{
-    z-index: 2000;
-    border: 2px solid black;
-    box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+    height: 350px;
+    width: 700px;
+    background-color: var(--donation-card);
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background-color: var(--donation-card);
-    height: 450px;
-    width: 700px;
+    box-shadow: 12px 6px 12px rgba(0,0,0,0.5);
     border-radius: 8px;
     display: none;
 }
-.donation_card p{
-    height: 30px;
-    width: 40px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 32px;
-    font-weight: 600;
+.donation_card h2{
+    width: 100%;
     text-align: center;
-    cursor: pointer;
-    z-index: 2000;
+    margin-top: 40px;
+    height: 50px;
+}
+.donation_card #heading_3{
+    width: 100%;
+    height: 50px;
+    font-size: 20px;
+    text-align: center;
 }
 .donation_card .payment_card{
-    position: absolute;
-    right: 0px;
-    top: 50px;
-    height: 400px;
-    width: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-radius: 8px;
-}
-.donation_card .payment_card h2{
     width: 100%;
-    height: 20px;
-    flex: 1 0 0;
-    text-align: center;
-    margin-top: 10px;
-}
-.donation_card .payment_card h3{
-    height: 20px;
-    text-align: center;
-    flex: 1 0 0;
-    width: 100%;
+    height: 360px;
 }
 .donation_card .payment_card .payment_btns{
-    width: 100%;
-    flex: 5 0 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 50px;
 }
-
+.donation_card .payment_card input{
+    display: none;
+    width: 50%;
+    margin-top: 20px;
+    border-radius: 8px;
+    height: 40px;
+    text-indent: 10px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    border: none;
+    font-size: 18px;
+}
+.donation_card .payment_card input:focus{
+    outline: none;
+}
+.donation_card #close_btn{
+    position: absolute;
+    right: 15px;
+    top: 10px;
+    font-size: 28px;
+    font-weight: 600;
+    color: var(--h2-color);
+    cursor: pointer;
+}
 
 
 /* Animation section */
 
 /* navbar anchor tag animation */
-.home nav ul li a:hover{            
-    color: gray;
+.home #navbar #u_list li > a:hover{
+    color: var(--h2-color);
 }
 .event .card > div:hover{
     box-shadow: 2px 2px 4px rgba(0,0,0,0.5);
@@ -396,20 +373,18 @@ h2{
     cursor: pointer;
 }  
 button:hover{
-    width: 140px;
-    height: 48px;
-    font-size: 26px;
+    width: 130px;
+    height: 44px;
 }
-
 
 /* about section animation */
 .about .card > div:hover {
     box-shadow: 2px 2px 4px rgba(0,0,0,0.5);
     transform: scale(1.05);
-    transition: all 300ms ease-in;
+    transition: all 300ms ease-in-out;
 }
 .about .tcard > div:not(:nth-child(3)):hover {
     box-shadow: 2px 2px 4px rgba(0,0,0,0.5);
     transform: scale(1.05);
-    transition: all 300ms ease-in;   
+    transition: all 300ms ease-in-out;   
 }
