--- a/stylesheet/istyle.css
+++ b/stylesheet/istyle.css
@@ -322,6 +322,7 @@ form input{
 .donation_card .payment_card{
     width: 100%;
     height: 360px;
+    position: relative;
 }
 .donation_card .payment_card .payment_btns{
     display: flex;
@@ -329,6 +330,9 @@ form input{
     justify-content: center;
     align-items: center;
     gap: 50px;
+    position: absolute;
+    transform: translate(-100%);
+    
 }
 .donation_card .payment_card input{
     display: none;
@@ -338,6 +342,7 @@ form input{
     height: 40px;
     text-indent: 10px;
     position: absolute;
+    bottom: 20px;
     left: 50%;
     transform: translate(-50%);
     border: none;
@@ -345,6 +350,41 @@ form input{
 }
 .donation_card .payment_card input:focus{
     outline: none;
+}
+.donation_card .payment_card .qr-card{
+    width: 100%;
+    height: 360px;
+    position: relative;
+}
+.donation_card .payment_card .qr-card img{
+    position: absolute;
+    left: 40px;
+    top: 10px;
+    height: 180px;
+    width: 35%;
+    background-color: var(--card-skeleton-color);
+}
+.donation_card .payment_card .qr-card > p{
+    text-align: center;
+    width: 50%;
+    text-align: center;
+    position: absolute;
+    left: 80%;
+    top: 10px;
+    transform: translate(-80%);
+
+}
+.donation_card .payment_card .qr-card > p:nth-child(2){
+    top: 30px;
+}
+.donation_card .payment_card .qr-card > p:nth-child(3){
+    top: 70px;
+}
+.donation_card .payment_card .qr-card > p:nth-child(4){
+    top: 110px;
+}
+.donation_card .payment_card .qr-card > p:nth-child(5){
+    top: 150px;
 }
 .donation_card #close_btn{
     position: absolute;
