--- a/stylesheet/istyle.css
+++ b/stylesheet/istyle.css
@@ -323,7 +323,7 @@ form input{
     width: 100%;
     height: 360px;
 }
-.donation_card .payment_card .payment_btns{
+/* .donation_card .payment_card .payment_btns{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -346,13 +346,13 @@ form input{
 }
 .donation_card .payment_card input:focus{
     outline: none;
-}
-.donation_card .payment_card .qr-card{
+} */
+.donation_card .payment_card{
     width: 100%;
     height: 360px;
     position: relative;
 }
-.donation_card .payment_card .qr-card img{
+.donation_card .payment_card img{
     position: absolute;
     left: 40px;
     top: 10px;
@@ -360,7 +360,7 @@ form input{
     width: 35%;
     background-color: var(--card-skeleton-color);
 }
-.donation_card .payment_card .qr-card > p{
+.donation_card .payment_card > p{
     text-align: center;
     width: 50%;
     text-align: center;
@@ -370,16 +370,16 @@ form input{
     transform: translate(-80%);
 
 }
-.donation_card .payment_card .qr-card > p:nth-child(2){
+.donation_card .payment_card > p:nth-child(2){
     top: 30px;
 }
-.donation_card .payment_card .qr-card > p:nth-child(3){
+.donation_card .payment_card > p:nth-child(3){
     top: 70px;
 }
-.donation_card .payment_card .qr-card > p:nth-child(4){
+.donation_card .payment_card > p:nth-child(4){
     top: 110px;
 }
-.donation_card .payment_card .qr-card > p:nth-child(5){
+.donation_card .payment_card > p:nth-child(5){
     top: 150px;
 }
 .donation_card #close_btn{
